[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://res/DynamicFont/Title.tres" type="DynamicFont" id=3]
[ext_resource path="res://res/DynamicFont/Text.tres" type="DynamicFont" id=4]
[ext_resource path="res://res/DynamicFont/Header.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="InputEventAction" id=2]
action = "ui_accept"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1920, 1080 )
color = Color( 0, 0, 0, 0.784314 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 637.0
margin_top = 137.0
margin_right = 1282.0
margin_bottom = 943.0
size_flags_vertical = 3
custom_constants/separation = 25
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 645.0
margin_bottom = 153.0
custom_fonts/font = ExtResource( 3 )
text = "S U I C I D E
S P A C E S H E E P"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Title"]
margin_left = 617.4
margin_top = 65.4491
margin_right = 643.4
margin_bottom = 140.449
custom_fonts/font = ExtResource( 3 )
text = "Â²"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 178.0
margin_right = 645.0
margin_bottom = 198.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsName" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 223.0
margin_right = 645.0
margin_bottom = 278.0
custom_fonts/font = ExtResource( 5 )
text = "Controls"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 303.0
margin_right = 645.0
margin_bottom = 515.0
size_flags_horizontal = 4
custom_constants/vseparation = 0
custom_constants/hseparation = 15
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="CenterContainer/VBoxContainer/Controls"]
margin_right = 315.0
margin_bottom = 212.0
custom_fonts/font = ExtResource( 4 )
text = "[Right & left arrows]
[Space]
[Up arrow]
[Hold space]
[Shift]"
align = 2

[node name="Function" type="Label" parent="CenterContainer/VBoxContainer/Controls"]
margin_left = 330.0
margin_right = 645.0
margin_bottom = 212.0
custom_fonts/font = ExtResource( 4 )
text = "Turn                              
Shoot
Accelerate
Multi-shot
Teleport"

[node name="Score" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_left = 231.0
margin_top = 540.0
margin_right = 413.0
margin_bottom = 595.0
size_flags_horizontal = 4
custom_constants/vseparation = 10
custom_constants/hseparation = 28
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CenterContainer/VBoxContainer/Score"]
margin_right = 125.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 5 )
text = "Score"
align = 2

[node name="Value" type="Label" parent="CenterContainer/VBoxContainer/Score"]
margin_left = 153.0
margin_right = 182.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 5 )
text = "0"

[node name="HighScore" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_left = 174.0
margin_top = 620.0
margin_right = 471.0
margin_bottom = 675.0
size_flags_horizontal = 4
custom_constants/vseparation = 10
custom_constants/hseparation = 28
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CenterContainer/VBoxContainer/HighScore"]
margin_right = 240.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 5 )
text = "High score"
align = 2

[node name="Value" type="Label" parent="CenterContainer/VBoxContainer/HighScore"]
margin_left = 268.0
margin_right = 297.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 5 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 700.0
margin_right = 645.0
margin_bottom = 720.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 745.0
margin_right = 645.0
margin_bottom = 806.0
custom_styles/focus = SubResource( 1 )
custom_fonts/font = ExtResource( 5 )
shortcut_in_tooltip = false
button_mask = 0
shortcut = SubResource( 3 )
text = "Press [Enter] to play"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Default"
anims/Default = SubResource( 4 )
anims/Hide = SubResource( 5 )
anims/Show = SubResource( 6 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
